# CELLULAR

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
CELLULAR/: __init__.py
CELLULAR/functions/: data_preprocessing.py  predict.py
CELLULAR/models/: CELLULAR_model.py  ModelClassifier.py
CELLULAR_CL/functions/: make_cell_type_representations.py
Tutorial/: README.md  classification_tutorial.ipynb  embedding_space_tutorial.ipynb  latent_space_tutorial.ipynb  pre_process_tutorial.ipynb
Tutorial/cell_type_vector_representation/: CellTypeRepresentations.csv
Tutorial/trained_models/: model_classifier.pt
Tutorial/trained_models/ModelMetadata/: hvg_genes.pt  label_encoder.pt  onehot_label_encoder.pt
Tutorial/trained_models/config/: model_classifier_config.json  model_config.json
scNear/: __init__.py
scNear/functions/: make_cell_type_representations.py  predict.py  train.py
scNear/models/: Model1.py  ModelClassifier.py
