[project]
name = "scNear"
version = "0.0.1"
authors = [
  { name="Leo Andrekson", email="leo.andrekson@gmail.com" },
]
description = "A package for generating an embedding space from scRNA-Seq. This space can be used for cell type annotation, cell type representations, and visualization"
readme = "README.md"
requires-python = ">=3.10.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LeoAnd00/MT_test_repo"
Issues = "https://github.com/LeoAnd00/MT_test_repo/issues"